--- a/webapp/templates/dreamsapp/song.html
+++ b/webapp/templates/dreamsapp/song.html
@@ -170,6 +170,7 @@
 	</div>
 	<div class="span4">
 	  <h4>Sleep stages visualized</h4>
+	  <p>The hypnogram on the left shows visualized sleep stages.
 	</div>
   </div>
   <div class="row">
@@ -179,6 +180,7 @@
 
     <div class="span4">
        <h4>Movements during the sleep</h4>
+       <p>The actigram on the left shows the amount of movements during the night.
     </div>
   </div>
   {% endif %}
