--- a/webapp/templates/dreamsapp/base.html
+++ b/webapp/templates/dreamsapp/base.html
@@ -11,7 +11,7 @@
 	
 	<link rel="stylesheet" href="{{ STATIC_URL }}blue.monday/jplayer.blue.monday.css" type="text/css">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>  
 
