--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -69,7 +69,10 @@
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
 			</p>
 
-			<p><a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_press_fi.pdf">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)	
+			<p><a href="http://www.helsinki.fi/ajankohtaista/uutisarkisto/9-2012/6-11-32-36.html">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)	
+			</p>
+
+			<p><a href="http://www.helsinki.fi/news/archive/9-2012/6-11-47-06.html">Turn your dreams into music</a>, press release Sep 6th, 2012 (in English)	
 			</p>
 
 
