--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -163,7 +163,9 @@
 			<a href="http://www.cs.helsinki.fi/research/algodan/">Algorithmic Data Analysis (Algodan)</a> 
 			Centre of Excellence of the Academy of Finland, 
 			and to the <a href="http://www.cs.helsinki.fi/en">Department of Computer Science</a> 
-			of the University of Helsinki for their financial support! 
+			of the University of Helsinki for their financial support.
+			Thanks also to Tomi Jylhä-Ollila for help with the 
+			<a href="http://kunquat.org/">Kunquat</a> system used to render the music!
 			</p>
 		</div>
 	</div>
