--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -153,6 +153,17 @@
 
 	<div class="row">
 		<div class="span12">
+			<h2>Source codes</h2>
+
+			<p>Python source codes of the <a href="https://github.com/Tulilaulu/Sleep-musicalization">musicalization</a>
+			implementation and <a href="https://github.com/beddit/sleep-musicalization-web">this website</a> are available.
+			</p>
+		</div>
+	</div>
+
+
+	<div class="row">
+		<div class="span12">
 			<h2>Thanks</h2>
 
 			<p>The musicalization project has been carried out in the 
