Improve the formatting of names

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -118,35 +118,23 @@
 
 	<div class="row">
 		<div class="span3">
-			<h3>
-				Aurora Tulilaulu<br>
-				<small>Music composition algorithms</small>
-			</h3>
-		
+			<b>Aurora Tulilaulu</b><br>
+			Music composition algorithms
 		</div>
-		
+
 		<div class="span3">
-			<h3>
-				<a href="http://www.cs.helsinki.fi/u/jpaalasm/">Joonas Paalasmaa</a><br>
-				<small>Sleep data analysis methods</small>
-			</h3>
-		
+			<b><a href="http://www.cs.helsinki.fi/u/jpaalasm/">Joonas Paalasmaa</a></b><br>
+			Sleep data analysis methods
 		</div>
-		
+
 		<div class="span3">
-			<h3>
-				Mikko Waris<br>
-				<small>Website</small>
-			</h3>
-		
+			<b>Mikko Waris</b><br>
+			Website
 		</div>
-		
+
 		<div class="span3">
-			<h3>
-				<a href="http://www.cs.helsinki.fi/u/htoivone/">Hannu Toivonen</a><br>
-				<small>Supervision</small>
-			</h3>
-			
+			<b><a href="http://www.cs.helsinki.fi/u/htoivone/">Hannu Toivonen</a></b><br>
+			Supervision
 		</div>
 	</div>
 
