--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -53,8 +53,9 @@
 			</p>
 
 			<p>
-			Sleep analysis in this service is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor.
-			Sleep measurements and analysis results are retrieved from the Beddit service, by the user's authorization,
+			Sleep analysis in this service is based on the <a href="http://beddit.com">Beddit</a> sleep measurement sensor,
+			which is installed under the mattress.
+			Sleep measurements are retrieved from the Beddit service, by the user's authorization,
 			and then musicalized by composing a novel piece of music.
 			</p>
 
