Add the other article

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -60,16 +60,25 @@
 			</p>
 
 			<h2>
-				<a name="publications"></a>Publications and Press
+				<a name="publications"></a>Publications
 			</h2>
 
 			<p>Tulilaulu, A., Paalasmaa, J., Waris, M. &amp; Toivonen, H. 2012.
 			<b>Sleep Musicalization: Automatic Music Composition from Sleep Measurements.</b>
-			In <span style="font-style:italic;">The Eleventh International Symposium on Intelligent Data Analysis (IDA 2012)</span>, 
+			In <span style="font-style:italic;">The Eleventh International Symposium on Intelligent Data Analysis (<a href="http://ida2012.org/">IDA 2012</a>)</span>,
 			LNCS 7619, 392-403. Springer 2012.
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
 			</p>
-
+			
+			Paalasmaa, J., Waris, M., Toivonen, H., Leppäkorpi, L. &amp; Partinen, M., 2012.
+			<b>Unobtrusive Online Monitoring of Sleep at Home.</b>
+			In <span style="font-style:italic;">34th Annual International Conference of the IEEE Engineering in Medicine and Biology Society, EMBC'12</span>.
+			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/paalasmaa_embs_12.pdf">PDF</a>]
+			
+			<h2>
+				<a name="publications"></a>Press coverage
+			</h2>
+			
 			<p><a href="http://www.helsinki.fi/ajankohtaista/uutisarkisto/9-2012/6-11-32-36.html">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)	
 			</p>
 
