--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -70,10 +70,11 @@
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/sleepmusicalization_ida_2012.pdf">PDF</a>]
 			</p>
 			
-			Paalasmaa, J., Waris, M., Toivonen, H., Leppäkorpi, L. &amp; Partinen, M., 2012.
+			<p>Paalasmaa, J., Waris, M., Toivonen, H., Leppäkorpi, L. &amp; Partinen, M., 2012.
 			<b>Unobtrusive Online Monitoring of Sleep at Home.</b>
 			In <span style="font-style:italic;">34th Annual International Conference of the IEEE Engineering in Medicine and Biology Society, EMBC'12</span>.
 			[<a href="http://www.cs.helsinki.fi/u/htoivone/pubs/paalasmaa_embs_12.pdf">PDF</a>]
+			</p>
 			
 			<h2>
 				<a name="publications"></a>Press coverage
