--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -80,11 +80,23 @@
 				<a name="publications"></a>Press coverage
 			</h2>
 			
-			<p><a href="http://www.helsinki.fi/ajankohtaista/uutisarkisto/9-2012/6-11-32-36.html">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)	
+			<p><a href="http://www.helsinki.fi/ajankohtaista/uutisarkisto/9-2012/6-11-32-36.html">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)
 			</p>
 
 			<p><a href="http://www.helsinki.fi/news/archive/9-2012/6-11-47-06.html">Turn your dreams into music</a>, press release Sep 6th, 2012 (in English)	
 			</p>
+			
+			<p><a href="http://www.01net.com/editorial/572371/un-logiciel-transforme-vos-reves-en-musique/">Un logiciel transforme vos rêves en musique</a>
+			</p>
+			
+			<p><a href="http://www.pressetext.com/news/20120912003">Traumhaft: Programm macht Schlaf zu Musik</a>
+			</p>
+			
+			<p><a href="http://www.diariodepernambuco.com.br/app/noticia/ciencia-e-saude/2012/09/12/internas_cienciaesaude,396097/cientistas-desenvolvem-software-que-transforma-sono-em-musica.shtml">Cientistas desenvolvem software que transforma sono em música</a>
+			</p>
+			
+			
+			
 
 
 		</div>
