Add press coverage

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -95,6 +95,10 @@
 			<p><a href="http://www.diariodepernambuco.com.br/app/noticia/ciencia-e-saude/2012/09/12/internas_cienciaesaude,396097/cientistas-desenvolvem-software-que-transforma-sono-em-musica.shtml">Cientistas desenvolvem software que transforma sono em música</a>
 			</p>
 			
+			<p><a href="http://medlive.hotnews.ro/vitmatina-cum-iti-poti-transforma-visele-in-muzica.html">Cum iti poti transforma visele in muzica</a>
+			</p>
+			
+			
 			
 			
 
