--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -89,6 +89,12 @@
 			<p><a href="http://www.01net.com/editorial/572371/un-logiciel-transforme-vos-reves-en-musique/">Un logiciel transforme vos rêves en musique</a>
 			</p>
 			
+			<p><a href="http://www.lesnumeriques.com/transformez-vos-reves-en-musique-n26077.html">Transformez vos rêves en musique</a>
+			</p>
+			
+			<p><a href="http://www.20minutes.fr/sciences/1002846-musique-reves">Des informaticiens finlandais ont développé un logiciel qui transforme vos rêves en musique...</a>
+			</p>
+			
 			<p><a href="http://www.pressetext.com/news/20120912003">Traumhaft: Programm macht Schlaf zu Musik</a>
 			</p>
 			
@@ -98,11 +104,15 @@
 			<p><a href="http://medlive.hotnews.ro/vitmatina-cum-iti-poti-transforma-visele-in-muzica.html">Cum iti poti transforma visele in muzica</a>
 			</p>
 			
+			<p><a href="http://www.techgear.gr/sleep-musicalization-turns-your-sleep-into-music-52530/">Sleep Musicalization, το software που μετατρέπει τον ύπνο σου σε μουσική</a>
+			</p>
 			
+			<p><a href="http://www.gizmag.com/software-sleep-music/24094/">New software turns sleep patterns into music</a>
+			</p>
 			
-			
-
-
+			<p><a href="http://techno.lapresse.ca/nouvelles/201209/11/01-4572869-un-logiciel-pour-capter-la-musique-de-vos-reves.php">Un logiciel pour capter la musique de vos rêves</a>
+			</p>
+		
 		</div>
 
 		<div class="span5">
