Add more press coverage links and hide them by default

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -77,41 +77,106 @@
 			</p>
 			
 			<h2>
-				<a name="publications"></a>Press coverage
+				<a name="press"></a>Press coverage
 			</h2>
 			
-			<p><a href="http://www.helsinki.fi/ajankohtaista/uutisarkisto/9-2012/6-11-32-36.html">Yöunesta voi nyt säveltää automaattisesti musiikkia</a>, press release Sep 6th, 2012 (in Finnish)
-			</p>
-
-			<p><a href="http://www.helsinki.fi/news/archive/9-2012/6-11-47-06.html">Turn your dreams into music</a>, press release Sep 6th, 2012 (in English)	
+			<p><a onclick="toggle_visibility('press');">Click to show press coverage</a></p>
+			<div id="press" style="display:none">
+			
+			<p><a href="http://www.helsinki.fi/news/archive/9-2012/6-11-47-06.html">
+			Turn your dreams into music</a>
+			(Press release Sep 6th, 2012, English)</p>
+			
+			<p><a href="http://www.helsinki.fi/ajankohtaista/uutisarkisto/9-2012/6-11-32-36.html">
+			Yöunesta voi nyt säveltää automaattisesti musiikkia</a>
+			(Press release Sep 6th, 2012, Finnish)</p>
+			
+			<p><a href="http://areena.yle.fi/tv/1673742?start=3m2s">
+			Yle Uutiset Uusimaa</a>
+			(YLE TV news, Finnish)</p>
+			
+			<p><a href="http://leiphone.blog.techweb.com.cn/archives/8131.html">
+			赫尔辛基大学新项目: 睡觉也能谱曲 人人都是音乐家</a>
+			(techweb.com.cn, Chinese)</p>
+			
+			<p><a href="http://www.maxisciences.com/objet-geek-du-week-end/l-039-objet-geek-du-week-end-sleep-musicalization-pour-ecouter-la-musique-de-vos-reves_art26589.html">
+			L'Objet Geek du Week End : Sleep Musicalization, pour écouter la musique de vos rêves!</a>
+			(MaxiSciences, French)</p>
+			
+			<p><a href="http://www.lesnumeriques.com/transformez-vos-reves-en-musique-n26077.html">
+			Transformez vos rêves en musique</a>
+			(Les Numeriques, French)</p>
+			
+			<p><a href="http://www.01net.com/editorial/572371/un-logiciel-transforme-vos-reves-en-musique/">
+			Un logiciel transforme vos rêves en musique</a>
+			(01.net, French)</p>
+			
+			<p><a href="http://www.20minutes.fr/sciences/1002846-musique-reves">
+			Des informaticiens finlandais ont développé un logiciel qui transforme vos rêves en musique...</a>
+			(20minutes.fr, French)
 			</p>
 			
-			<p><a href="http://www.01net.com/editorial/572371/un-logiciel-transforme-vos-reves-en-musique/">Un logiciel transforme vos rêves en musique</a>
-			</p>
+			<p><a href="http://www.pressetext.com/news/20120912003">
+			Traumhaft: Programm macht Schlaf zu Musik</a>
+			(pressetext, German)</p>
 			
-			<p><a href="http://www.lesnumeriques.com/transformez-vos-reves-en-musique-n26077.html">Transformez vos rêves en musique</a>
-			</p>
+			<p><a href="http://www.diariodepernambuco.com.br/app/noticia/ciencia-e-saude/2012/09/12/internas_cienciaesaude,396097/cientistas-desenvolvem-software-que-transforma-sono-em-musica.shtml">
+			Cientistas desenvolvem software que transforma sono em música</a>
+			(Diario de Pernambuco, Brasian Portuquese)</p>
 			
-			<p><a href="http://www.20minutes.fr/sciences/1002846-musique-reves">Des informaticiens finlandais ont développé un logiciel qui transforme vos rêves en musique...</a>
-			</p>
+			<p><a href="http://medlive.hotnews.ro/vitmatina-cum-iti-poti-transforma-visele-in-muzica.html">
+			Cum iti poti transforma visele in muzica</a>
+			(MedLive, Romanian)</p>
 			
-			<p><a href="http://www.pressetext.com/news/20120912003">Traumhaft: Programm macht Schlaf zu Musik</a>
-			</p>
+			<p><a href="http://www.techgear.gr/sleep-musicalization-turns-your-sleep-into-music-52530/">
+			Sleep Musicalization, το software που μετατρέπει τον ύπνο σου σε μουσική</a>
+			(TechGear, Greek)</p>
 			
-			<p><a href="http://www.diariodepernambuco.com.br/app/noticia/ciencia-e-saude/2012/09/12/internas_cienciaesaude,396097/cientistas-desenvolvem-software-que-transforma-sono-em-musica.shtml">Cientistas desenvolvem software que transforma sono em música</a>
-			</p>
+			<p><a href="http://www.gizmag.com/software-sleep-music/24094/">
+			New software turns sleep patterns into music</a>
+			(Gizmag, English)</p>
 			
-			<p><a href="http://medlive.hotnews.ro/vitmatina-cum-iti-poti-transforma-visele-in-muzica.html">Cum iti poti transforma visele in muzica</a>
-			</p>
+			<p><a href="http://www.powplop.tv/2012/09/crean-software-que-crea-musica-a-partir-de-tus-suenos/">
+			Crean software que crea música a partir de tus sueños</a>
+			(Powplow, Spanish)</p>
 			
-			<p><a href="http://www.techgear.gr/sleep-musicalization-turns-your-sleep-into-music-52530/">Sleep Musicalization, το software που μετατρέπει τον ύπνο σου σε μουσική</a>
-			</p>
+			<p><a href="http://www.smedia.rs/biznis/vest/38413/Uredjaj-koji-pretvara-snove-u-muziku-Softver-koji-komponuje-melodiju-Uredjaj-koji-pretvara-snove-u-muziku-Da-li-biste-voleli-da-cujete-kako-vas-san-zvuci-FOTO.html">
+			Uređaj koji pretvara snove u muziku: Da li biste voleli da čujete kako vaš san zvuči?</a>
+			(SMEDIA, Serbian?)</p>
 			
-			<p><a href="http://www.gizmag.com/software-sleep-music/24094/">New software turns sleep patterns into music</a>
-			</p>
+			<p><a href="http://www.scientias.nl/nieuwe-software-geeft-uw-dromen-een-stem/71923">
+			Nieuwe software geeft uw dromen een stem</a>
+			(scientias.nl, Dutch)</p>
 			
-			<p><a href="http://techno.lapresse.ca/nouvelles/201209/11/01-4572869-un-logiciel-pour-capter-la-musique-de-vos-reves.php">Un logiciel pour capter la musique de vos rêves</a>
-			</p>
+			<p><a href="http://www.naukawpolsce.pap.pl/aktualnosci/news,391727,muzyka-ze-snu.html">
+			Muzyka ze snu</a>
+			(Nauka w Polsce, Polish)</p>
+			
+			<p><a href="http://news.discovery.com/tech/music-made-from-dreams-120912.html">
+			Find Out What Your Dreams Sound Like</a>
+			(Discovery News, English)</p>
+			
+			<p><a href="http://news.cnet.com/8301-17938_105-57511480-1/your-sleep-patterns-now-in-soundtrack-form/">
+			Your sleep patterns, now in soundtrack form</a>
+			(CNET, English)</p>
+			
+			<p><a href="http://de.engadget.com/2012/09/13/daten-musikalisierung-nachtschlaf-als-klavierstuck-anhoren/">
+			Daten-Musikalisierung: Nachtschlaf als Klavierstück anhören</a>
+			(engadget, German)</p>
+			
+			<p><a href="http://hicomm.bg/hi-tech/kak-zvuchat-synishtata.html/">
+			Как звучат сънищата?</a>
+			(HiComm, Bulgarian)</p>
+			
+			<p><a href="http://srednja.hr/Zabava/Tech--Web/Softver-koji-pretvara-snove-u-muziku">
+			Softver koji pretvara snove u muziku</a>
+			(srednja, Croatian)</p>
+			
+			<p><a href="http://noos.com.ua/ru/post/2999">
+			Финны научились превращать сны в музыку</a>
+			(Ноосфера, Russian)</p>
+			
+			</div>
 		
 		</div>
 
