--- a/webapp/templates/dreamsapp/base.html
+++ b/webapp/templates/dreamsapp/base.html
@@ -17,6 +17,18 @@
 
     <script src="{{ STATIC_URL }}js/jQuery.jPlayer.2.1.0/jquery.jplayer.min.js"></script>  
 
+    <script type="text/javascript">
+    <!--
+    function toggle_visibility(id) {
+       var e = document.getElementById(id);
+       if(e.style.display == 'block')
+          e.style.display = 'none';
+       else
+          e.style.display = 'block';
+    }
+    //-->
+    </script>
+
     {% block head %}
     {% endblock %}
     
