Add one more press link

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -176,6 +176,10 @@
 			Финны научились превращать сны в музыку</a>
 			(Ноосфера, Russian)</p>
 			
+			<p><a href="http://www.dailytechinfo.org/infotech/4004-novaya-programma-prevraschaet-sny-lyudey-v-udivitelnuyu-muzyku.html">
+			Новая программа превращает сны людей в удивительную музыку</a>
+			(DailyTechInfo, Russian)</p>
+			
 			</div>
 		
 		</div>
