Add link from Vietnam

--- a/webapp/templates/dreamsapp/home.html
+++ b/webapp/templates/dreamsapp/home.html
@@ -180,6 +180,10 @@
 			Новая программа превращает сны людей в удивительную музыку</a>
 			(DailyTechInfo, Russian)</p>
 			
+			<p><a href="http://genk.vn/c198n20120921042447263/soan-nhac-tu-giac-ngu.chn">
+			Soạn nhạc từ giấc ngủ</a>
+			(GenK, Vietnam)</p>
+			
 			</div>
 		
 		</div>
